--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <p>Provavelmente você sabe que o sistema operacional Android, mantido pelo Google é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
             <h2 class="font">A primeira versão</h2>
             <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a target="_blank" class = 'link' href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/">Dan Morrill🔗</a>. Ele conta que abriu o <a target="_blank" class='link' href="https://inkscape.org/pt-br/">Inkscape🔗</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
+            </div>
             <picture>
                 <source media="(max-width: 600px)" srcset="imagens/dan-droids-pq.png">
                 <img src="imagens/dan-droids.png" alt="Primeiro Mascote do Android">
@@ -40,6 +41,7 @@
             <img id="pequena"src="imagens/bugdroid.png" alt="">
 
             <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
+            
             <div class="video"><iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/5K4pEk19nhs?si=mT5SyPNMowIOsF8m" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 <aside>
                     <h3>Quer aprender mais? </h3>
@@ -52,15 +54,16 @@ Outro assunto curioso em relação ao Android é que cada versão sempre foi nom
       <li>  1.6 - <abbr title="Rosquinha">Donut</abbr>  </li>      
       <li> 4.4 - <abbr title="KitKat">KitKat</abbr></li>
         <li>3.0 - <abbr title="Bomba">Eclair</abbr>  </li>       <li> 5.0 - <abbr title="Pirulito">Lolipop</abbr></li>
-        <li>2.2 - <abbr title="Iougurte Congelado">Froyo</abbr>   </li>           <li>6.0 - <abbr title="Marshmallow">Marshmallow</abbr></li>
+        <li>4.0 - <abbr title="Sanduiche de sorvete">Ice Cream Sandwich </abbr>  </li>            <li>6.0 - <abbr title="Marshmallow">Marshmallow</abbr></li>
         <li>2.3 - <abbr title="Biscoito de gengibre">Gingerbread</abbr>     </li>        <li>7.0 - <abbr title="Torrone">Nougat</abbr></li>
         <li>3.0 - <abbr title="Favo de mel">Honeycomb</abbr>     </li>      <li>8.0 - <abbr title="Oreo">Oreo</abbr></li>
-        <li>4.0 - <abbr title="Sanduiche de sorvete">Ice Cream Sandwich </abbr>  </li>    <li>9.0 - <abbr title="Torta">Pie</abbr></li>
+        <li>2.2 - <abbr title="Iougurte Congelado">Froyo</abbr>   </li>   <li>9.0 - <abbr title="Torta">Pie</abbr></li>
 </ul>
-        </div>
-    </main>
-        <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.</p>
+<p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.</p>
         <p>Acesse aqui o site Android History para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
+        </div>
+        <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
+    </main>
         </aside>
     <footer>
         <h1>Site criado por <a href="https://github.com/RobertoKFSF">Roberto Kleber</a></h1>
